Mise en page du footer + MQ

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <title>ohmyfood !</title>
 </head>
 <body>
@@ -35,7 +36,7 @@
 
     <footer>
         <div>
-            <p>Mentions légales</p>
+            <a>Mentions légales</a>
         </div>
         <div>
             <a>Contactez-nous</a>
