--- a/index.html
+++ b/index.html
@@ -15,22 +15,34 @@
 
     <section>
 
-        <article class="note-enchantée">
-            <h2>La note enchantée</h2>
-            <p>MENU</p>
-        </article>
-        <article class="chic-française">
-            <h2>Le chic à la française</h2>
-            <p>Menu</p>
-        </article>
-        <article class="délice-papille">
-            <h2>Le délice des papilles</h2>
-            <p>Menu</p>
-        </article>
-        <article class="palette-goût">
-            <h2>La palette du goût</h2>
-            <p>Menu</p>
-        </article>
+        <a>
+            <article class="note-enchantée">
+                <img src="./img/note-musique.png">
+                <h2>La note enchantée</h2>
+                <p>MENU</p>
+            </article>
+        </a>
+
+        <a>
+            <article class="chic-française">
+                <h2>Le chic à la française</h2>
+                <p>Menu</p>
+            </article>
+        </a>
+
+        <a>
+            <article class="délice-papille">
+                <h2>Le délice des papilles</h2>
+                <p>Menu</p>
+            </article>
+        </a>
+
+        <a>
+            <article class="palette-goût">
+                <h2>La palette du goût</h2>
+                <p>Menu</p>
+            </article>
+        </a>
 
         <article class="next">
             <p>Prochainement</p>
