--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Réservez les meilleurs restaurants en ligne, ne perdez plus de temps !">
+    <meta name="keywords" content="Restaurant, rapide, qualité">
+    <meta name="author" content="Wa-ran">
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=DM+Serif+Text&family=Dancing+Script&family=Devonshire&family=Itim&family=Kaushan+Script&family=Montserrat:wght@500&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-    <title>ohmyfood !</title>
+    <title>Ohmyfood !</title>
 </head>
 <body>
 
@@ -15,36 +18,36 @@
 
     <section>
 
-        <a>
-            <article class="note-enchantée">
+        <a href="./pages-menu/note-enchantée.html">
+            <article id="note-enchantée">
                 <img src="./img/note-musique.png">
                 <h2>La note enchantée</h2>
                 <p>MENU</p>
             </article>
         </a>
 
-        <a>
-            <article class="chic-française">
+        <a href="./pages-menu/chic-française.html">
+            <article id="chic-française">
                 <h2>Le chic à la française</h2>
                 <p>Menu</p>
             </article>
         </a>
 
-        <a>
-            <article class="délice-papille">
+        <a href="./pages-menu/délice-papille.html">
+            <article id="délice-papille">
                 <h2>Le délice des papilles</h2>
                 <p>Menu</p>
             </article>
         </a>
 
-        <a>
-            <article class="palette-goût">
+        <a href="./pages-menu/palette-goût.html">
+            <article id="palette-goût">
                 <h2>La palette du goût</h2>
                 <p>Menu</p>
             </article>
         </a>
 
-        <article class="next">
+        <article id="next">
             <p>Prochainement</p>
         </article>
 
