--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Réservez les meilleurs restaurants en ligne, ne perdez plus de temps !">
     <meta name="keywords" content="Restaurant, rapide, qualité">
     <meta name="author" content="Wa-ran">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/prefixed/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=DM+Serif+Text&family=Dancing+Script&family=Devonshire&family=Itim&family=Kaushan+Script&family=Montserrat:wght@500&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
     <title>Ohmyfood !</title>
 </head>
@@ -18,36 +18,36 @@
 
     <section>
 
-        <a href="./pages-menu/note-enchantée.html">
-            <article id="note-enchantée">
-                <img src="./img/note-musique.png">
+        <a href="./pages-menu/note-enchantee.html">
+            <article class="note-enchantee">
+                <img src="./img/note-enchantee/note-musique.png" alt="">
                 <h2>La note enchantée</h2>
                 <p>MENU</p>
             </article>
         </a>
 
-        <a href="./pages-menu/chic-française.html">
-            <article id="chic-française">
+        <a href="./pages-menu/chic-francaise.html">
+            <article class="chic-francaise">
                 <h2>Le chic à la française</h2>
                 <p>Menu</p>
             </article>
         </a>
 
-        <a href="./pages-menu/délice-papille.html">
-            <article id="délice-papille">
+        <a href="./pages-menu/delice-papilles.html">
+            <article class="delice-papilles">
                 <h2>Le délice des papilles</h2>
                 <p>Menu</p>
             </article>
         </a>
 
-        <a href="./pages-menu/palette-goût.html">
-            <article id="palette-goût">
+        <a href="./pages-menu/palette-gout.html">
+            <article class="palette-gout">
                 <h2>La palette du goût</h2>
                 <p>Menu</p>
             </article>
         </a>
 
-        <article id="next">
+        <article class="next">
             <p>Prochainement</p>
         </article>
 
