--- a/pages-menu/chic-francaise.html
+++ b/pages-menu/chic-francaise.html
@@ -21,9 +21,9 @@
         <article class="chic-francaise">
             <h2>Le chic à la française</h2>
             <table>
-                <tr class="chic-francaise--table__entree">
+                <tr class="table--title chic-francaise--table__entree">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/chic-francaise/bord-g-1.png" alt="">
                             <div>Pour se mettre en appétit</div>
                             <img src="../img/chic-francaise/bord-d-1.png" alt="">
@@ -42,43 +42,43 @@
                     <td>Soupe à l'oignon revisité</td>
                     <td>57€</td>
                 </tr>
-                <tr class=" chic-francaise--table__plat">
+                <tr class="table--title chic-francaise--table__plat">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/chic-francaise/bord-g-2.png" alt="">
                             <div>Plaisir des papilles</div>
                             <img src="../img/chic-francaise/bord-d-2.png" alt="">
                         </div>
                     </td>
                 </tr>
-                <tr class=" chic-francaise--table__plat">
+                <tr class="chic-francaise--table__plat">
                     <td>Coquilles Saint-Jacques accompagnées d'une purée de panais</td>
                     <td>95€</td>
                 </tr>
-                <tr class=" chic-francaise--table__plat">
+                <tr class="chic-francaise--table__plat">
                     <td>Magret de canard et parmentier de pommes de terres</td>
                     <td>88€</td>
                 </tr>
-                <tr class=" chic-francaise--table__plat">
+                <tr class="chic-francaise--table__plat">
                     <td>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</td>
                     <td>175€</td>
                 </tr>
-                <tr class=" chic-francaise--table__dessert">
+                <tr class="table--title chic-francaise--table__dessert">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/chic-francaise/bord-g-3.png" alt="">
                             <div>Gourmandises sucrées</div>
                             <img src="../img/chic-francaise/bord-d-3.png" alt="">
                         </div>
                     </td>
                 </tr>
-                <tr class=" chic-francaise--table__dessert">
+                <tr class="chic-francaise--table__dessert">
                     <td>Pétales de violettes glacés et purée de noisettes</td>
                 </tr>
-                <tr class=" chic-francaise--table__dessert">
+                <tr class="chic-francaise--table__dessert">
                     <td>Fondant au chocolat revisité</td>
                 </tr>
-                <tr class=" chic-francaise--table__dessert">
+                <tr class="chic-francaise--table__dessert">
                     <td>Millefeuille croustillant</td>
                 </tr>
             </table>
