--- a/pages-menu/palette-gout.html
+++ b/pages-menu/palette-gout.html
@@ -21,9 +21,9 @@
         <article class="palette-gout">
             <h2>La palette du goût</h2>
             <table>
-                <tr>
+                <tr class="table--title">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/palette-gout/bord-g.png" alt="">
                             <div>Esquisse</div>
                             <img src="../img/palette-gout/bord-d.png" alt="">
@@ -42,9 +42,9 @@
                     <td>Foie gras de canard mi-cuit et ses copeaux de truffe noire</td>
                     <td>65€</td>
                 </tr>
-                <tr>
+                <tr class="table--title">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/palette-gout/bord-g.png" alt="">
                             <div>Oeuvre de maître</div>
                             <img src="../img/palette-gout/bord-d.png" alt="">
@@ -63,9 +63,9 @@
                     <td>Filet de Turbot aux agrumes</td>
                     <td>125€</td>
                 </tr>
-                <tr>
+                <tr class="table--title">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/palette-gout/bord-g.png" alt="">
                             <div>Au sommet de l'art</div>
                             <img src="../img/palette-gout/bord-d.png" alt="">
