--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Réservez les meilleurs restaurants en ligne, ne perdez plus de temps !">
     <meta name="keywords" content="Restaurant, rapide, qualité">
     <meta name="author" content="Wa-ran">
-    <link rel="stylesheet" href="./css/prefixed/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=DM+Serif+Text&family=Dancing+Script&family=Devonshire&family=Itim&family=Kaushan+Script&family=Montserrat:wght@500&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
     <title>Ohmyfood !</title>
 </head>
