--- a/pages-menu/delice-papilles.html
+++ b/pages-menu/delice-papilles.html
@@ -21,9 +21,9 @@
         <article class="delice-papilles">
             <h2>Le délice des papilles</h2>
             <table>
-                <tr>
+                <tr class="table--title">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/delice-papilles/bord-g-1.png" alt="">
                             <div>Pour bien commencer</div>
                             <img src="../img/delice-papilles/bord-d-1.png" alt="">
@@ -42,9 +42,9 @@
                     <td>Velouté de cèpes aux truffes</td>
                     <td>56€</td>
                 </tr>
-                <tr>
+                <tr class="table--title">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/delice-papilles/bord-g-2.png" alt="">
                             <div>Pour bien continuer</div>
                             <img src="../img/delice-papilles/bord-d-2.png" alt="">
@@ -63,9 +63,9 @@
                     <td>Côte de boeuf augus et sa purée de panais</td>
                     <td>115€</td>
                 </tr>
-                <tr>
+                <tr class="table--title">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/delice-papilles/bord-g-3.png" alt="">
                             <div>Pour bien terminer</div>
                             <img src="../img/delice-papilles/bord-d-3.png" alt="">
