--- a/pages-menu/note-enchantee.html
+++ b/pages-menu/note-enchantee.html
@@ -22,9 +22,9 @@
             <img src="../img/note-enchantee/note-musique.png" alt="">
             <h2>La note enchantée</h2>
             <table>
-                <tr>
+                <tr class="table--title">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/note-enchantee/bord-g.png" alt="">
                             <div>Prélude</div>
                             <img src="../img/note-enchantee/bord-d.png" alt="">
@@ -47,9 +47,9 @@
                     <td>Foie gras de canard cuit entier, confiture de figue et pain toasté</td>
                     <td>105€</td>
                 </tr>
-                <tr>
+                <tr class="table--title">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/note-enchantee/bord-g.png" alt="">
                             <div>Point d'orgue</div>
                             <img src="../img/note-enchantee/bord-d.png" alt="">
@@ -68,9 +68,9 @@
                     <td>Mijoté de queue de boeuf et riz sauvage aux zests de citron</td>
                     <td>169€</td>
                 </tr>
-                <tr>
+                <tr class="table--title">
                     <td colspan="2">
-                        <div class="table--title">
+                        <div>
                             <img src="../img/note-enchantee/bord-g.png" alt="">
                             <div>Mouvement final</div>
                             <img src="../img/note-enchantee/bord-d.png" alt="">
@@ -78,13 +78,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</td>
+                    <td colspan="2">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</td>
                 </tr>
                 <tr>
-                    <td>Baba au rhum revisité avec son coulis de citron</td>
+                    <td colspan="2">Baba au rhum revisité avec son coulis de citron</td>
                 </tr>
                 <tr>
-                    <td>Tarte au citron meringuée destructurée</td>
+                    <td colspan="2">Tarte au citron meringuée destructurée</td>
                 </tr>
             </table>
             <div class="article--footer">
