MQ portrait + animations

--- a/pages/chic-francaise.html
+++ b/pages/chic-francaise.html
@@ -20,8 +20,8 @@
         <h2>Le chic à la française</h2>
         <article class="chic-francaise">
             <h2>Le chic à la française</h2>
-            <table>
-                <tr class="table--title chic-francaise--table__entree">
+            <table class="entree">
+                <tr class="table--title">
                     <td colspan="2">
                         <div>
                             <img src="../img/chic-francaise/bord-g-1.png" alt="">
@@ -30,19 +30,21 @@
                         </div>
                     </td>
                 </tr>
-                <tr class="chic-francaise--table__entree">
+                <tr>
                     <td>Tartare de poulpe acidulé aux zests d'orange</td>
                     <td>79€</td>
                 </tr>
-                <tr class="chic-francaise--table__entree">
+                <tr>
                     <td>Velouté de légumes d'antan</td>
                     <td>57€</td>
                 </tr>
-                <tr class="chic-francaise--table__entree">
+                <tr>
                     <td>Soupe à l'oignon revisité</td>
                     <td>57€</td>
                 </tr>
-                <tr class="table--title chic-francaise--table__plat">
+            </table>
+            <table class="plat">
+                <tr class="table--title">
                     <td colspan="2">
                         <div>
                             <img src="../img/chic-francaise/bord-g-2.png" alt="">
@@ -51,20 +53,22 @@
                         </div>
                     </td>
                 </tr>
-                <tr class="chic-francaise--table__plat">
+                <tr>
                     <td>Coquilles Saint-Jacques accompagnées d'une purée de panais</td>
                     <td>95€</td>
                 </tr>
-                <tr class="chic-francaise--table__plat">
+                <tr>
                     <td>Magret de canard et parmentier de pommes de terres</td>
                     <td>88€</td>
                 </tr>
-                <tr class="chic-francaise--table__plat">
+                <tr>
                     <td>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</td>
                     <td>175€</td>
                 </tr>
-                <tr class="table--title chic-francaise--table__dessert">
-                    <td colspan="2">
+            </table>
+            <table class="dessert">
+                <tr class="table--title">
+                    <td>
                         <div>
                             <img src="../img/chic-francaise/bord-g-3.png" alt="">
                             <div>Gourmandises sucrées</div>
@@ -72,13 +76,13 @@
                         </div>
                     </td>
                 </tr>
-                <tr class="chic-francaise--table__dessert">
+                <tr>
                     <td>Pétales de violettes glacés et purée de noisettes</td>
                 </tr>
-                <tr class="chic-francaise--table__dessert">
+                <tr>
                     <td>Fondant au chocolat revisité</td>
                 </tr>
-                <tr class="chic-francaise--table__dessert">
+                <tr>
                     <td>Millefeuille croustillant</td>
                 </tr>
             </table>
