--- a/pages/note-enchantee.html
+++ b/pages/note-enchantee.html
@@ -21,7 +21,7 @@
         <article class="note-enchantee">
             <img src="../img/note-enchantee/note-musique.png" alt="">
             <h2>La note enchantée</h2>
-            <table>
+            <table class="entree">
                 <tr class="table--title">
                     <td colspan="2">
                         <div>
@@ -47,6 +47,8 @@
                     <td>Foie gras de canard cuit entier, confiture de figue et pain toasté</td>
                     <td>105€</td>
                 </tr>
+            </table>
+            <table class="plat">
                 <tr class="table--title">
                     <td colspan="2">
                         <div>
@@ -68,6 +70,8 @@
                     <td>Mijoté de queue de boeuf et riz sauvage aux zests de citron</td>
                     <td>169€</td>
                 </tr>
+            </table>
+            <table class="dessert">
                 <tr class="table--title">
                     <td colspan="2">
                         <div>
