--- a/pages/palette-gout.html
+++ b/pages/palette-gout.html
@@ -20,7 +20,7 @@
         <h2>La palette du goût</h2>
         <article class="palette-gout">
             <h2>La palette du goût</h2>
-            <table>
+            <table class="entree">
                 <tr class="table--title">
                     <td colspan="2">
                         <div>
@@ -42,6 +42,8 @@
                     <td>Foie gras de canard mi-cuit et ses copeaux de truffe noire</td>
                     <td>65€</td>
                 </tr>
+            </table>
+            <table class="plat">
                 <tr class="table--title">
                     <td colspan="2">
                         <div>
@@ -63,6 +65,8 @@
                     <td>Filet de Turbot aux agrumes</td>
                     <td>125€</td>
                 </tr>
+            </table>
+            <table class="dessert">
                 <tr class="table--title">
                     <td colspan="2">
                         <div>
