--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section>
 
-        <a href="./pages-menu/note-enchantee.html">
+        <a href="./pages/note-enchantee.html">
             <article class="note-enchantee">
                 <img src="./img/note-enchantee/note-musique.png" alt="">
                 <h2>La note enchantée</h2>
@@ -26,21 +26,21 @@
             </article>
         </a>
 
-        <a href="./pages-menu/chic-francaise.html">
+        <a href="./pages/chic-francaise.html">
             <article class="chic-francaise">
                 <h2>Le chic à la française</h2>
                 <p>Menu</p>
             </article>
         </a>
 
-        <a href="./pages-menu/delice-papilles.html">
+        <a href="./pages/delice-papilles.html">
             <article class="delice-papilles">
                 <h2>Le délice des papilles</h2>
                 <p>Menu</p>
             </article>
         </a>
 
-        <a href="./pages-menu/palette-gout.html">
+        <a href="./pages/palette-gout.html">
             <article class="palette-gout">
                 <h2>La palette du goût</h2>
                 <p>Menu</p>
@@ -48,17 +48,20 @@
         </a>
 
         <article class="next">
-            <p>Prochainement</p>
+            <div>Prochainement</div>
+            <div class="pnt1">.</div>
+            <div class="pnt2">.</div>
+            <div class="pnt3">.</div>
         </article>
 
     </section>
 
     <footer>
         <div>
-            <a>Mentions légales</a>
+            <a href="./pages/ml.html">Mentions légales</a>
         </div>
         <div>
-            <a>Contactez-nous</a>
+            <a href="mailto:mgs.gilles@gmail.com" target="_blank">Contactez-nous</a>
         </div>
     </footer>
 </body>
