--- a/pages/delice-papilles.html
+++ b/pages/delice-papilles.html
@@ -20,7 +20,7 @@
         <h2>Le délice des papilles</h2>
         <article class="delice-papilles">
             <h2>Le délice des papilles</h2>
-            <table>
+            <table class="entree">
                 <tr class="table--title">
                     <td colspan="2">
                         <div>
@@ -42,6 +42,8 @@
                     <td>Velouté de cèpes aux truffes</td>
                     <td>56€</td>
                 </tr>
+            </table>
+            <table class="plat">
                 <tr class="table--title">
                     <td colspan="2">
                         <div>
@@ -63,6 +65,8 @@
                     <td>Côte de boeuf augus et sa purée de panais</td>
                     <td>115€</td>
                 </tr>
+            </table>
+            <table class="dessert">
                 <tr class="table--title">
                     <td colspan="2">
                         <div>
