Change table--title from td to div with flex

--- a/pages/chic-francaise.html
+++ b/pages/chic-francaise.html
@@ -20,16 +20,14 @@
         <h2>Le chic à la française</h2>
         <article class="chic-francaise">
             <h2>Le chic à la française</h2>
+
+            <div class="table--title entree">
+                <img src="../img/chic-francaise/bord-g-1.png" alt="">
+                <div>Pour se mettre en appétit</div>
+                <img src="../img/chic-francaise/bord-d-1.png" alt="">
+            </div>    
+
             <table class="entree">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/chic-francaise/bord-g-1.png" alt="">
-                            <div>Pour se mettre en appétit</div>
-                            <img src="../img/chic-francaise/bord-d-1.png" alt="">
-                        </div>
-                    </td>
-                </tr>
                 <tr>
                     <td>Tartare de poulpe acidulé aux zests d'orange</td>
                     <td>79€</td>
@@ -43,16 +41,14 @@
                     <td>57€</td>
                 </tr>
             </table>
+
+            <div class="table--title plat">
+                <img src="../img/chic-francaise/bord-g-2.png" alt="">
+                <div>Plaisir des papilles</div>
+                <img src="../img/chic-francaise/bord-d-2.png" alt="">
+            </div>
+
             <table class="plat">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/chic-francaise/bord-g-2.png" alt="">
-                            <div>Plaisir des papilles</div>
-                            <img src="../img/chic-francaise/bord-d-2.png" alt="">
-                        </div>
-                    </td>
-                </tr>
                 <tr>
                     <td>Coquilles Saint-Jacques accompagnées d'une purée de panais</td>
                     <td>95€</td>
@@ -66,16 +62,14 @@
                     <td>175€</td>
                 </tr>
             </table>
+
+            <div class="table--title dessert">
+                <img src="../img/chic-francaise/bord-g-3.png" alt="">
+                <div>Gourmandises sucrées</div>
+                <img src="../img/chic-francaise/bord-d-3.png" alt="">
+            </div>   
+
             <table class="dessert">
-                <tr class="table--title">
-                    <td>
-                        <div>
-                            <img src="../img/chic-francaise/bord-g-3.png" alt="">
-                            <div>Gourmandises sucrées</div>
-                            <img src="../img/chic-francaise/bord-d-3.png" alt="">
-                        </div>
-                    </td>
-                </tr>
                 <tr>
                     <td>Pétales de violettes glacés et purée de noisettes</td>
                 </tr>
