--- a/pages/delice-papilles.html
+++ b/pages/delice-papilles.html
@@ -20,16 +20,14 @@
         <h2>Le délice des papilles</h2>
         <article class="delice-papilles">
             <h2>Le délice des papilles</h2>
+
+            <div class="table--title">
+                <img src="../img/delice-papilles/bord-g-1.png" alt="">
+                <div>Pour bien commencer</div>
+                <img src="../img/delice-papilles/bord-d-1.png" alt="">
+            </div>   
+
             <table class="entree">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/delice-papilles/bord-g-1.png" alt="">
-                            <div>Pour bien commencer</div>
-                            <img src="../img/delice-papilles/bord-d-1.png" alt="">
-                        </div>
-                    </td>
-                </tr>
                 <tr>
                     <td>Tartare de thon assaisonné au yuzu</td>
                     <td>55€</td>
@@ -43,16 +41,14 @@
                     <td>56€</td>
                 </tr>
             </table>
+
+            <div class="table--title">
+                <img src="../img/delice-papilles/bord-g-2.png" alt="">
+                <div>Pour bien continuer</div>
+                <img src="../img/delice-papilles/bord-d-2.png" alt="">
+            </div>  
+
             <table class="plat">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/delice-papilles/bord-g-2.png" alt="">
-                            <div>Pour bien continuer</div>
-                            <img src="../img/delice-papilles/bord-d-2.png" alt="">
-                        </div>
-                    </td>
-                </tr>
                 <tr>
                     <td>Poulet rôti aux herbes de provence et sa crème de truffe</td>
                     <td>110€</td>
@@ -66,16 +62,14 @@
                     <td>115€</td>
                 </tr>
             </table>
+
+            <div class="table--title">
+                <img src="../img/delice-papilles/bord-g-3.png" alt="">
+                <div>Pour bien terminer</div>
+                <img src="../img/delice-papilles/bord-d-3.png" alt="">
+            </div> 
+
             <table class="dessert">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/delice-papilles/bord-g-3.png" alt="">
-                            <div>Pour bien terminer</div>
-                            <img src="../img/delice-papilles/bord-d-3.png" alt="">
-                        </div>
-                    </td>
-                </tr>
                 <tr>
                     <td>Farandole de desserts du chef</td>
                     <td>55€</td>
