--- a/pages/note-enchantee.html
+++ b/pages/note-enchantee.html
@@ -21,16 +21,14 @@
         <article class="note-enchantee">
             <img src="../img/note-enchantee/notemusique.png" alt="">
             <h2>La note enchantée</h2>
+
+            <div class="table--title">
+                <img src="../img/note-enchantee/bord-g.png" alt="">
+                <div>Prélude</div>
+                <img src="../img/note-enchantee/bord-d.png" alt="">
+            </div>   
+                     
             <table class="entree">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/note-enchantee/bord-g.png" alt="">
-                            <div>Prélude</div>
-                            <img src="../img/note-enchantee/bord-d.png" alt="">
-                        </div>
-                    </td>
-                </tr>
                 <tr>
                     <td>Ravioles de foie gras accompagnés de leur crème à la truffe</td>
                     <td>98€</td>
@@ -48,16 +46,14 @@
                     <td>105€</td>
                 </tr>
             </table>
+
+            <div class="table--title">
+                <img src="../img/note-enchantee/bord-g.png" alt="">
+                <div>Point d'orgue</div>
+                <img src="../img/note-enchantee/bord-d.png" alt="">
+            </div>                    
+
             <table class="plat">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/note-enchantee/bord-g.png" alt="">
-                            <div>Point d'orgue</div>
-                            <img src="../img/note-enchantee/bord-d.png" alt="">
-                        </div>                    
-                    </td>
-                </tr>
                 <tr>
                     <td>Noix de coquille Saint-Jacques sur lit de purée de céleri-rave</td>
                     <td>102€</td>
@@ -71,16 +67,14 @@
                     <td>169€</td>
                 </tr>
             </table>
+
+            <div class="table--title">
+                <img src="../img/note-enchantee/bord-g.png" alt="">
+                <div>Mouvement final</div>
+                <img src="../img/note-enchantee/bord-d.png" alt="">
+            </div>
+                          
             <table class="dessert">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/note-enchantee/bord-g.png" alt="">
-                            <div>Mouvement final</div>
-                            <img src="../img/note-enchantee/bord-d.png" alt="">
-                        </div>                    
-                    </td>
-                </tr>
                 <tr>
                     <td colspan="2">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</td>
                 </tr>
