--- a/pages/palette-gout.html
+++ b/pages/palette-gout.html
@@ -20,16 +20,14 @@
         <h2>La palette du goût</h2>
         <article class="palette-gout">
             <h2>La palette du goût</h2>
+
+            <div class="table--title">
+                <img src="../img/palette-gout/bord-g.png" alt="">
+                <div>Esquisse</div>
+                <img src="../img/palette-gout/bord-d.png" alt="">
+            </div>   
+
             <table class="entree">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/palette-gout/bord-g.png" alt="">
-                            <div>Esquisse</div>
-                            <img src="../img/palette-gout/bord-d.png" alt="">
-                        </div>
-                    </td>
-                </tr>
                 <tr>
                     <td>Fricassée d'escargot au piment d'espelette</td>
                     <td>60€</td>
@@ -43,16 +41,14 @@
                     <td>65€</td>
                 </tr>
             </table>
+
+            <div class="table--title">
+                <img src="../img/palette-gout/bord-g.png" alt="">
+                <div>Oeuvre de maître</div>
+                <img src="../img/palette-gout/bord-d.png" alt="">
+            </div>    
+
             <table class="plat">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/palette-gout/bord-g.png" alt="">
-                            <div>Oeuvre de maître</div>
-                            <img src="../img/palette-gout/bord-d.png" alt="">
-                        </div>
-                    </td>
-                </tr>
                 <tr>
                     <td>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</td>
                     <td>70€</td>
@@ -66,16 +62,14 @@
                     <td>125€</td>
                 </tr>
             </table>
+
+            <div class="table--title">
+                <img src="../img/palette-gout/bord-g.png" alt="">
+                <div>Au sommet de l'art</div>
+                <img src="../img/palette-gout/bord-d.png" alt="">
+            </div>
+
             <table class="dessert">
-                <tr class="table--title">
-                    <td colspan="2">
-                        <div>
-                            <img src="../img/palette-gout/bord-g.png" alt="">
-                            <div>Au sommet de l'art</div>
-                            <img src="../img/palette-gout/bord-d.png" alt="">
-                        </div>
-                    </td>
-                </tr>
                 <tr>
                     <td>Paris-Brest revisité</td>
                     <td>55€</td>
