Amélioration de l'anim next, fix des tableaux (colspan:2)

--- a/pages/ml.html
+++ b/pages/ml.html
@@ -17,9 +17,12 @@
     </header>
 
     <section>
-        <article class="next">
-            <p>Prochainement</p>
-        </article>
+        <div class="next">
+            <div>Prochainement</div>
+            <div class="pnt1">.</div>
+            <div class="pnt2">.</div>
+            <div class="pnt3">.</div>
+        </div>
     </section>
 
 </body>
