--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             </article>
         </a>
 
-        <article class="next">
+        <div class="next">
             <div>Prochainement</div>
             <div class="pnt1">.</div>
             <div class="pnt2">.</div>
             <div class="pnt3">.</div>
-        </article>
+        </div>
 
     </section>
 
