Fix clospan:2 sur note-enchantee

--- a/pages/note-enchantee.html
+++ b/pages/note-enchantee.html
@@ -76,13 +76,13 @@
                           
             <table class="dessert">
                 <tr>
-                    <td colspan="2">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</td>
+                    <td>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</td>
                 </tr>
                 <tr>
-                    <td colspan="2">Baba au rhum revisité avec son coulis de citron</td>
+                    <td>Baba au rhum revisité avec son coulis de citron</td>
                 </tr>
                 <tr>
-                    <td colspan="2">Tarte au citron meringuée destructurée</td>
+                    <td>Tarte au citron meringuée destructurée</td>
                 </tr>
             </table>
             <div class="article--footer">
