Fix responsive sur mobile fin, fix autoprefixer

--- a/pages/delice-papilles.html
+++ b/pages/delice-papilles.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Réservez votre menu chez le délice des papilles.">
     <meta name="keywords" content="Restaurant, rapide, qualité, Note Enchantée">
     <meta name="author" content="Wa-ran">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/prefixed/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=DM+Serif+Text&family=Dancing+Script&family=Devonshire&family=Itim&family=Kaushan+Script&family=Montserrat:wght@500&family=Nanum+Pen+Script&family=Kalam:wght@400&display=swap" rel="stylesheet">
     <title>Ohmyfood - Le délice des papilles</title>
 </head>
