--- a/pages/delice-papilles.html
+++ b/pages/delice-papilles.html
@@ -21,7 +21,7 @@
         <article class="delice-papilles">
             <h2>Le délice des papilles</h2>
 
-            <div class="table--title">
+            <div class="table--title entree">
                 <img src="../img/delice-papilles/bord-g-1.png" alt="">
                 <div>Pour bien commencer</div>
                 <img src="../img/delice-papilles/bord-d-1.png" alt="">
@@ -42,7 +42,7 @@
                 </tr>
             </table>
 
-            <div class="table--title">
+            <div class="table--title plat">
                 <img src="../img/delice-papilles/bord-g-2.png" alt="">
                 <div>Pour bien continuer</div>
                 <img src="../img/delice-papilles/bord-d-2.png" alt="">
@@ -63,7 +63,7 @@
                 </tr>
             </table>
 
-            <div class="table--title">
+            <div class="table--title dessert">
                 <img src="../img/delice-papilles/bord-g-3.png" alt="">
                 <div>Pour bien terminer</div>
                 <img src="../img/delice-papilles/bord-d-3.png" alt="">
