--- a/pages/palette-gout.html
+++ b/pages/palette-gout.html
@@ -21,7 +21,7 @@
         <article class="palette-gout">
             <h2>La palette du goût</h2>
 
-            <div class="table--title">
+            <div class="table--title entree">
                 <img src="../img/palette-gout/bord-g.png" alt="">
                 <div>Esquisse</div>
                 <img src="../img/palette-gout/bord-d.png" alt="">
@@ -42,7 +42,7 @@
                 </tr>
             </table>
 
-            <div class="table--title">
+            <div class="table--title plat">
                 <img src="../img/palette-gout/bord-g.png" alt="">
                 <div>Oeuvre de maître</div>
                 <img src="../img/palette-gout/bord-d.png" alt="">
@@ -63,7 +63,7 @@
                 </tr>
             </table>
 
-            <div class="table--title">
+            <div class="table--title dessert">
                 <img src="../img/palette-gout/bord-g.png" alt="">
                 <div>Au sommet de l'art</div>
                 <img src="../img/palette-gout/bord-d.png" alt="">
