--- a/pages/note-enchantee.html
+++ b/pages/note-enchantee.html
@@ -18,7 +18,7 @@
 
     <section class="pages">
         <h2>La note enchantée</h2>
-        <article class="note-enchantee">
+        <article class="note-enchantee entree">
             <img src="../img/note-enchantee/notemusique.png" alt="">
             <h2>La note enchantée</h2>
 
@@ -47,7 +47,7 @@
                 </tr>
             </table>
 
-            <div class="table--title">
+            <div class="table--title plat">
                 <img src="../img/note-enchantee/bord-g.png" alt="">
                 <div>Point d'orgue</div>
                 <img src="../img/note-enchantee/bord-d.png" alt="">
@@ -68,7 +68,7 @@
                 </tr>
             </table>
 
-            <div class="table--title">
+            <div class="table--title dessert">
                 <img src="../img/note-enchantee/bord-g.png" alt="">
                 <div>Mouvement final</div>
                 <img src="../img/note-enchantee/bord-d.png" alt="">
