HOTFIX sur les hover des menus

--- a/pages/note-enchantee.html
+++ b/pages/note-enchantee.html
@@ -18,11 +18,11 @@
 
     <section class="pages">
         <h2>La note enchantée</h2>
-        <article class="note-enchantee entree">
+        <article class="note-enchantee">
             <img src="../img/note-enchantee/notemusique.png" alt="">
             <h2>La note enchantée</h2>
 
-            <div class="table--title">
+            <div class="table--title entree">
                 <img src="../img/note-enchantee/bord-g.png" alt="">
                 <div>Prélude</div>
                 <img src="../img/note-enchantee/bord-d.png" alt="">
